--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: "자연어처리 바이블"
-name: "자연어처리 바이블
+title                    : "NLP BIBLE"
+name                     : "NLP BIBLE"
+description              : "NLP BIBLE"
